ek-package/config/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: elasticsearch-kibana
  name: default
