ek-package/config/kibana.yaml
#@ load("@ytt:data", "data")

#@ def labels():
app: kibana
#@ end

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: #@ data.values.namespace
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector: #@ labels()
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: #@ data.values.namespace
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels: #@ labels()
  template:
    metadata:
      labels: #@ labels()
    spec:
      containers:
      - name: kibana
        image: docker.io/bitnami/kibana:7.2.1
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
