ek-package/config/service.yaml
#@ load("@ytt:data", "data")

#@ def labels():
app: elasticsearch
#@ end

---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: default
  labels:
    app: elasticsearch
spec:
  selector: #@ labels()
  type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
