ek-package/config/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: #@ data.values.namespace
  labels:
    app: elasticsearch
spec:
  rules:
  - host: #@ data.values.elasticsearch.ingress.virtual_host_fqdn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
           name: elasticsearch
           port:
             number: 9200
